<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/txtTourist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="#B7FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/kg"
        app:layout_constraintTop_toBottomOf="@+id/txtTourist"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signin"
        android:textColor="#B7FFFFFF"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="542dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_facebook"
        android:text="@string/facebook"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignIn"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gmail"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_gmail"
        android:text="@string/gmail"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>